[package]
name = "pelo"
version = "0.1.0"
edition = "2021"
authors = ["dario.domizioli@gmail.com"]


[dependencies.rusqlite]
version = "0.29"

[dependencies.rand]
version = "0.8"

[dependencies.serde]
version = "1"
default-features = true
features = ["derive", "serde_derive"]

[dependencies.chrono]
version = "0.4"
default-features = true
features = ["std", "serde"]

[dependencies.url]
version = "2"
default-features = true
features = ["serde"]

[dependencies.uuid]
version = "1.4"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]
